DOC-9 Fixes for DNN theme Added expand/collapse on left hand nav tree.  Also added sticky footer.

--- a/common/themes/dnn/static/dnn.styles.css
+++ b/common/themes/dnn/static/dnn.styles.css
@@ -52,10 +52,6 @@ h2 {
 .horizontal-list li:last-child {
   padding-right: 0;
 }
-.no-gutter {
-  padding-left: 0;
-  padding-right: 0;
-}
 .footer {
   background: #382224;
   clear: both;
@@ -122,7 +118,7 @@ h2 {
 }
 .footer .quick-links {
   clear: both;
-  padding: 45px 0;
+  padding: 30px 0 0;
   margin: 0;
 }
 .footer .quick-links:before,
@@ -205,14 +201,18 @@ h2 {
   padding: 15px 75px 15px 0;
   color: #888;
   font-size: 18px;
-  line-height: 20px;
+  white-space: nowrap;
 }
 .header .logo:hover {
   text-decoration: none;
 }
 .header .logo img {
-  margin-right: 5px;
-  vertical-align: calc(-37%);
+  display: inline-block;
+  margin-right: 8px;
+}
+.header .logo span {
+  position: relative;
+  top: 2px;
 }
 .logo-wrapper {
   position: relative;
@@ -357,6 +357,7 @@ h2 {
 }
 .welcome-hero-wrapper {
   padding-top: 40px;
+  background: white;
   margin: 0 0 60px;
   text-align: center;
 }
@@ -366,8 +367,15 @@ h2 {
   width: 100%;
 }
 .card-row {
+  clear: both;
   background-image: linear-gradient(to bottom, white 12%, #f4f4f4 30%);
   margin: 0 -15px;
+}
+.card-row:before,
+.card-row:after {
+  clear: both;
+  content: ' ';
+  display: table;
 }
 .home-card {
   background: white;
@@ -394,10 +402,15 @@ h2 {
   text-transform: uppercase;
 }
 .home-card .card-img-wrapper {
-  padding: 45px 120px;
+  padding: 45px 80px;
   border-color: #ccc;
   border-style: solid;
   border-width: 0 1px;
+}
+@media (min-width: 992px) {
+  .home-card .card-img-wrapper {
+    padding: 45px 120px;
+  }
 }
 .home-card .card-img {
   width: 100%;
@@ -581,6 +594,14 @@ h2 {
 .doc-main-body.open .doc-wrapper {
   width: 15%;
 }
+.doc-main-body.open .doc-wrapper:before {
+  background: rgba(0, 0, 0, 0.5);
+  content: 'X';
+  cursor: pointer;
+}
+.doc-main-body.open .doc-wrapper:hover:before {
+  background: rgba(0, 0, 0, 0.6);
+}
 .doc-nav-wrapper {
   float: left;
   width: 10%;
@@ -614,26 +635,51 @@ li.toctree-l1 {
   display: block;
   width: 100%;
   overflow: hidden;
+  color: #787878;
+  background: #f2f2f2;
+  position: relative;
+}
+li.toctree-l1 > .glyphicon {
+  position: absolute;
+  left: 5px;
+  top: 10px;
+  z-index: 10;
+  cursor: pointer;
 }
 li.toctree-l1 > a {
   display: inline-block;
-  color: #787878;
-  background: #f2f2f2;
   border: none;
   position: relative;
   width: 100%;
-  padding: 7px;
+  padding: 7px 7px 7px 22px;
   margin: 1px 0;
   text-align: left;
   white-space: nowrap;
   transition: all 0.2s ease-out;
 }
-li.toctree-l1 > a .glyphicon {
-  margin-right: 15px;
-}
 li.toctree-l1 > a:hover,
 li.toctree-l1 > a.current {
   background: #dbeef4;
+  text-decoration: none;
+}
+li.toctree-l1 > ul {
+  display: none;
+  margin: 0;
+  padding: 10px 5px;
+  background: white;
+}
+li.toctree-l1 > ul > li {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+}
+li.toctree-l1 > ul > li a {
+  display: block;
+  padding: 5px 15px;
+}
+li.toctree-l1 > ul > li a:hover {
+  background: #e6e6e6;
+  color: #19aee5;
   text-decoration: none;
 }
 .doc-search {
@@ -648,27 +694,25 @@ li.toctree-l1 > a.current {
   text-align: center;
   transition: all 0.2s ease-out;
 }
-.doc-sub-nav {
-  display: none;
-  margin: 0;
-  padding: 10px 5px;
-  background: white;
-}
-.doc-sub-nav > li a {
-  display: block;
-  padding: 5px 15px;
-}
-.doc-sub-nav > li a:hover {
-  background: #e6e6e6;
-  color: #19aee5;
-  text-decoration: none;
-}
 .doc-wrapper {
   float: left;
   width: 90%;
   background: white;
   position: relative;
   transition: all 0.2s ease-out;
+}
+.doc-wrapper:before {
+  background: rgba(0, 0, 0, 0);
+  color: white;
+  content: '';
+  font-size: 2em;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: all 0.2s ease-out;
+  text-align: center;
 }
 .doc {
   padding: 15px;
