--- a/common/themes/dnn/styles/footer.less
+++ b/common/themes/dnn/styles/footer.less
@@ -69,7 +69,7 @@
 	.quick-links{
 		.c-B;
 
-		padding:45px 0;
+		padding:30px 0 0;
 		margin:0;
 
 		li{
