--- a/common/themes/dnn/styles/utility.less
+++ b/common/themes/dnn/styles/utility.less
@@ -26,8 +26,3 @@
         }
     }
 }
-
-.no-gutter {
-    padding-left: 0;
-    padding-right: 0;
-}
